--- a/london/london.html
+++ b/london/london.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="location">
                         <div class="location-child">
-                            <img src="./images/location.png" class="location-icon" alt="location icon">
+                            <img src="../images/location.png" class="location-icon" alt="location icon">
                             Location
                         </div>
                     </div>
